--- a/sytless/style.css
+++ b/sytless/style.css
@@ -56,11 +56,78 @@ nav li a{
   border-radius: 5px;
   padding: 18px 35px;
 }
+.btn-2{
+  background: transparent;
+  color: var(--Button);
+  font-size: 20px;
+  font-weight: 600;
+  border-width: 2px;
+  border-color: var(--Button);
+  border-radius: 5px;
+  padding: 18px 35px;
+  margin-left: 20px;
+}
 .hero-banner{
   display: flex;
   align-items: center;
-  padding: 0px 30px 0px 200px;
+  margin: 0px 30px 0px 200px;
 }
-.hero-img{
+
+.hero-subtitle{
+  font-size: 45px;
+  font-weight: 500;
+  color: var(--Secondary);
+}
+.hero-title{
+  color: var(--Primary);
+  font-size: 85px;
+  font-weight: 600;
+
+}
+.hero-description{
+  color: var(--Text);
+  font-size: 18px;
+  padding: 0px 150px 20px 0px;
+}
+.hero-img .hero-content{
   width: 580px;
+}
+/* about section */
+.maine{
+  max-width: 1140px;
+  margin: 0 auto;
+}
+.about{
+  background-color: var(--Bg);
+  justify-content: center;
+  text-align: center;
+  padding: 100px 100px;
+  margin: 130px;
+}
+.about-title{
+  color: var(--Primary);
+  font-size: 35px;
+  font-weight: 600;
+  margin: 20px;
+}
+.about-description{
+  color: var(--Text);
+  font-size: 18px;
+  font-weight: 400;
+}
+.about-items{
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
+  gap: 20px;
+}
+.item-title{
+  color: var(--Text);
+  font-size: 20px;
+  font-weight: 300;
+}
+.item-description{
+  color: var(--Primary);
+  font-size: 20px;
+  font-weight: 600;
 }
